2008-02-21  Deng Xiyue <manphiz@gmail.com>

	* examples/book/box/main.cc
	* examples/book/custom/custom_widget/mywidget.cc
	* examples/book/drawingarea/arcs/myarea.cc
	* examples/book/drawingarea/clock/clock.cc
	* examples/book/treeview/editable_cells/examplewindow.cc
	* examples/gdk/radar.cc:
	Fix header inclusion and use using directive for C functions to
	fix build on gcc-4.3 and Solaris.  Refined from Tim Mooney's
	patch.
	(Bug #498438, #517530)

2008-02-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* merged documentation fixes from gtkmm-2-12 branch, -r 960:967

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/images/widgets/notebook1.png:
	* docs/reference/images/widgets/textview1.png:
	* gtk/src/aboutdialog.hg:
	* gtk/src/colorselection.hg:
	* gtk/src/filechooserdialog.hg:
	* gtk/src/fontselection.hg:
	* gtk/src/frame.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/notebook.hg:
	* gtk/src/recentchooserdialog.hg:
	* gtk/src/scale.hg:
	* gtk/src/scrollbar.hg:
	* gtk/src/separator.hg:
	* gtk/src/table.hg:
	* gtk/src/toggletoolbutton.hg: add a bunch more images to the API reference

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	patch by: Chris Wang <chris.wang@sun.com>

	* demos/gtk-demo/Makefile.am: install resource files for gtkmm demo program
	(also change the name from 'demo' to 'gtkmm-demo').  Fixes Bug #516602

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	patch by: Chris Wang <chris.wang@sun.com>

	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/example_images.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_textview.cc: fix gtkmm demo program to be able to
	find the source and image files when not run from the source directory.
	Fixes bug #516600

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* gtk/gtkmm/stock.h: update gtk stock icon names

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Makefile.am:
	* gtk/gtkmm/stock.h:
	* gtk/src/calendar.hg:
	* gtk/src/entry.hg: