@@ -1,0 +1,10 @@
+EXTRA_DIST = aboutdialog1.png comboboxentry1.png hscale1.png notebook1.png \
+  toggletoolbutton1.png arrow1.png entry1.png hscrollbar1.png \
+  progressbar1.png toolbar1.png button2.png filechooserbutton1.png \
+  hseparator1.png radiobutton1.png toolbutton1.png calendar1.png \
+  filechooserdialog1.png image1.png recentchooserdialog1.png vscale1.png \
+  checkbutton1.png fontbutton1.png label1.png spinbutton1.png vscrollbar1.png \
+  colorbutton1.png fontselectiondialog1.png linkbutton1.png statusbar1.png \
+  vseparator1.png colorselectiondialog1.png frame1.png menubar1.png table1.png \
+  combobox1.png hbuttonbox1.png messagedialog1.png textview1.png
+
