@@ -1,3 +1,11 @@
+2008-02-24  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in:
+	* docs/reference/Makefile.am:
+	* docs/reference/images/Makefile.am:
+	* docs/reference/images/widgets/Makefile.am: Added Makefile.am files 
+	to dist the contents of these new directories, to fix distcheck.
+
 2008-02-21  Deng Xiyue <manphiz@gmail.com>
 
 	* examples/book/box/main.cc
